# mamba-constrict

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
configs/: config.yaml  dataloader.yaml  trainer.yaml
configs/data/: babilong.yaml  passkey.yaml  pg19.yaml  the_pile.yaml
configs/hydra/launcher/: submitit_slurm.yaml
configs/loss/: default.yaml  l1.yaml  l2.yaml  mahalanobis.yaml  temporal_drift.yaml
configs/model/: mamba2-780m.yaml
configs/optim/: adamw.yaml
configs/scheduler/: cosine.yaml
configs/trainer/: default.yaml  evals.yaml
eval/: README.md  lm-eval.yaml  model_utils.py
eval/LongBench/: README.md  pred.py  pred_mamba.py  result.py
eval/LongBench/config/: model2path.json
eval/babilong/: prompts.py  result.py  run_model_on_babilong.py
eval/config/: model2maxlen.json  model2path.json
eval/passkey_retrieval/: passkey_utils.py  result.py  run_test.py
eval/pg19/: filter_128k_books.sh  plot_results.py  run_perplexity.py
eval/pg19/wandb/: latest-run
eval/pg19/wandb/run-20260110_183305-k7xhcann/: run-k7xhcann.wandb
finetune/: data.py  finetune.py  lightning.py  lightning_module.py
finetune/cli/: prepare_data.py
finetune/criterion/: L1.py  L2.py  __init__.py  base.py  core.py  empty.py  mahalanobis_energy.py  temporal_drift.py  zero.py
models/: README.md  huggingface_models.txt
scripts/: data.sh  data_sc.sh  env.sh  env_sc.sh  run.sh  run_sc.sh  upload.py
scripts/cscs/: arr.sh  arr_eval.sh  arr_train.sh  build_image.sbatch  build_vllm_image.sbatch  data.sh  env.sh  run.sh  run_4.sh  single.sh
scripts/cscs/eval/: babilong.sh  build_eval_image.sbatch  filter_128k_books.sh  finetune.sh  lm_eval.sh  lm_eval_long.sh  lm_eval_mamba2_tasks.sh  longbench.sh  passkey.sh  perplexity.sh  test_vllm_inference.py  test_vllm_inference.sh
scripts/euler/: data.sh  env.sh  run.sh  run_1.sh  run_4.sh
scripts/euler/eval/: babilong.sh  eval_passkey.sh
scripts/eval/: babilong.sh  eval_babilong.sh  eval_longbench.sh  eval_passkey.sh  eval_pg19.sh  longbench.sh  run_all.sh  run_all_evals.sh
scripts/sc/: data.sh  env.sh  run.sh
slurm/: Dockerfile  Dockerfile.eval  Dockerfile.vllm  README.md  eval.toml  finetune.toml  vllm.toml
(+2 files in other folders)
