[project]
name = "finetune"
version = "0.1.0"
description = "Hidden-state regularization for long-context Mamba finetuning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0",
    "causal-conv1d>=1.5.3.post1",
    "datasets==3.6.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.6",
    "mamba-ssm>=2.2.6.post3",
    "transformers>=4.57.1",
    "wandb>=0.23.1",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["finetune"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
files = ["finetune"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true
